# advent_of_code

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
2023/: config.py
2023/01/: solution.py
2023/02/: solution.py
2023/03/: problem_1.py  problem_2.py  solution.py
2023/04/: solution.go  solution_test.go
2023/05/: day5_test.go  solution.go
2023/06/: go.mod  instructions.txt  solution.go  solution_test.go
2023/07/: go.mod  solution.go  solution_test.go
2023/08/: go.mod  solution.go  solution_test.go  test_data_p2.txt  test_data_part2.txt
2023/09/: go.mod  go.sum  solution.go  solution_test.go  test_data.txt
2023/10/: go.mod  solution.go
2023/11/: go.mod  solution.go
2023/12/: go.mod  solution.go  solution_test.go
2023/13/: go.mod  solution.go
2023/14/: go.mod  solution.go  solution_test.go
2023/15/: go.mod  solution.go
2023/16/: go.mod  solution.go
2023/17/: go.mod  solution.go  test2.txt  test3.txt
2023/18/: example-result.txt  go.mod  solution.go
2023/templates/: independent_lines.py  utils.go
2024/00/: solution.py  tests.py
2024/02/: solution.py  test_input2.txt  tests.py
2024/03/: solution.py
cookiecutter/: TODOs.md  cc_context.jsonl
deployment/: cloudbuild.yaml  clouddeploy.yaml  cloudtraffic.yaml
src/: graphql.py  main.py  routes.py
src/config/: env_settings.py  project_settings.py  routing.py  templates.py
tests/: __init__.py  additional_routes.py  conftest.py  test_settings.py
